; ModuleID = '/home/carl/AnghaBench/linux/lib/lz4/extr_lz4hc_compress.c_LZ4_loadDictHC.c'
source_filename = "/home/carl/AnghaBench/linux/lib/lz4/extr_lz4hc_compress.c_LZ4_loadDictHC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32* }

@KB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LZ4_loadDictHC(%struct.TYPE_6__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @KB, align 4
  %12 = mul nsw i32 64, %11
  %13 = icmp sgt i32 %10, %12
  br i1 %13, label %14, label %24

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @KB, align 4
  %17 = mul nsw i32 64, %16
  %18 = sub nsw i32 %15, %17
  %19 = load i8*, i8** %5, align 8
  %20 = sext i32 %18 to i64
  %21 = getelementptr inbounds i8, i8* %19, i64 %20
  store i8* %21, i8** %5, align 8
  %22 = load i32, i32* @KB, align 4
  %23 = mul nsw i32 64, %22
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %14, %3
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = bitcast i8* %26 to i32*
  %28 = call i32 @LZ4HC_init(%struct.TYPE_7__* %25, i32* %27)
  %29 = load i32, i32* %6, align 4
  %30 = icmp sge i32 %29, 4
  br i1 %30, label %31, label %40

31:                                               ; preds = %24
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %33 = load i8*, i8** %5, align 8
  %34 = bitcast i8* %33 to i32*
  %35 = load i32, i32* %6, align 4
  %36 = sub nsw i32 %35, 3
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %34, i64 %37
  %39 = call i32 @LZ4HC_Insert(%struct.TYPE_7__* %32, i32* %38)
  br label %40

40:                                               ; preds = %31, %24
  %41 = load i8*, i8** %5, align 8
  %42 = bitcast i8* %41 to i32*
  %43 = load i32, i32* %6, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  store i32* %45, i32** %47, align 8
  %48 = load i32, i32* %6, align 4
  ret i32 %48
}

declare dso_local i32 @LZ4HC_init(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @LZ4HC_Insert(%struct.TYPE_7__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
